--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.13.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.8",
     "nuxt": "^3.17.4",
     "tailwindcss": "^4.1.8",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.13.2",
+    "@iconify-json/tabler": "^1.2.18",
     "daisyui": "^5.0.43",
     "eslint": "^9.28.0",
     "eslint-plugin-format": "^1.0.1",
