--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "note about db:dev": "need to run in windows WSL",
+    "db:dev": "turso dev --db-file local.db",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.8",
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.13.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.8",
+    "drizzle-orm": "^0.44.1",
     "nuxt": "^3.17.4",
     "tailwindcss": "^4.1.8",
     "vue": "latest",
@@ -26,6 +33,7 @@
     "@antfu/eslint-config": "^4.13.2",
     "@iconify-json/tabler": "^1.2.18",
     "daisyui": "^5.0.43",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
     "eslint-plugin-format": "^1.0.1",
     "husky": "^9.1.7",
