--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.13.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/vite": "^4.1.8",
     "better-auth": "^1.2.8",
     "drizzle-orm": "^0.44.1",
     "nuxt": "^3.17.4",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.8",
     "vue": "latest",
     "zod": "^3.25.44"
