--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/vite": "^4.1.8",
+    "@vee-validate/zod": "^4.15.0",
     "better-auth": "^1.2.8",
     "drizzle-orm": "^0.44.1",
+    "drizzle-zod": "^0.7.0",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.8",
+    "vee-validate": "^4.15.1",
     "vue": "latest",
-    "zod": "^3.25.44"
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.13.2",
     "@iconify-json/tabler": "^1.2.18",
+    "@vee-validate/nuxt": "^4.15.1",
     "daisyui": "^5.0.43",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
