--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "eslint": "^9.28.0",
     "eslint-plugin-format": "^1.0.1",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.0"
+    "lint-staged": "^16.1.0",
+    "nuxt-csurf": "^1.6.5"
   },
   "lint-staged": {
     "*": "npm run lint"
