--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "better-auth": "^1.2.8",
     "drizzle-orm": "^0.44.1",
     "drizzle-zod": "^0.7.0",
+    "nanoid": "^5.1.5",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.3",
     "slug": "^11.0.0",
