--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "drizzle-zod": "^0.7.0",
     "nanoid": "^5.1.5",
     "nuxt": "^3.17.4",
+    "nuxt-maplibre": "^1.1.1",
     "pinia": "^3.0.3",
     "slug": "^11.0.0",
     "tailwindcss": "^4.1.8",
